--- a/www/public_html/index.html
+++ b/www/public_html/index.html
@@ -49,17 +49,18 @@
                     <div class="st-scroll">
 
                             <!-- Placeholder text from http://hipsteripsum.me/ -->
-                            
+
                             <section class="st-panel" id="st-panel-0">
                                     <div class="st-deco">
-                                        <img src="assets/photographer-2.jpg" alt="photopeer logo">
+                                        <img src="assets/logo.JPG" alt="photopeer logo">
                                     </div>
                                     <div id="cbp-fwslider" class="cbp-fwslider">
                                             <ul>
-                                                    <li><a href="#"><img src="images/1.jpg" alt="img01"/></a></li>
-                                                    <li><a href="#"><img src="images/2.jpg" alt="img02"/></a></li>
-                                                    <li><a href="#"><img src="images/3.jpg" alt="img03"/></a></li>
-                                                    <li><a href="#"><img src="images/4.jpg" alt="img04"/></a></li>
+                                                    <li><a href="#"><img src="images/image1.jpg" alt="image01"/></a></li>
+                                                    <li><a href="#"><img src="images/beauty1.jpg" alt="img01"/></a></li>
+                                                    <li><a href="#"><img src="images/beauty2.jpg" alt="img02"/></a></li>
+                                                    <li><a href="#"><img src="images/beauty3.jpg" alt="img03"/></a></li>
+                                                    <li><a href="#"><img src="images/beauty4.jpg" alt="img04"/></a></li>
                                                     <li><a href="#"><img src="images/5.jpg" alt="img05"/></a></li>
                                             </ul>
                                     </div>
@@ -151,7 +152,6 @@
                         - destroy:
                         $( selector ).cbpFWSlider( 'destroy' );
                         */
-
                         $( '#cbp-fwslider' ).cbpFWSlider();
 
                 } );
